--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <ul>
             <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">our Services</a></li>
+            <li class="item"><a href="order.html">Order</a></li>
             <li class="item"><a href="#">Partners</a></li>
             <li class="item"><a href="#">Contact Us</a></li>
         </ul>
