--- a/order.html
+++ b/order.html
@@ -39,7 +39,7 @@
         <section class="card">
           <img src="orderImages/aurora.jpg" />
           <h2 class="plantName">Aurora</h2>
-          <p class="plantDescription">FICUS ALTISSIMA YELLOW GEM</p>
+          <p class="plantDescription">VARIEGATED MONSTERA</p>
           <div class="orderCardSection">
             <label for="quantity">Item(s):</label>
             <input
@@ -55,7 +55,7 @@
         <section class="card">
           <img src="orderImages/cynthia.jpg" />
           <h2 class="plantName">Cynthia</h2>
-          <p class="plantDescription">FICUS ALTISSIMA YELLOW GEM</p>
+          <p class="plantDescription">AFRICAN FIG</p>
           <div class="orderCardSection">
             <label for="quantity">Item(s):</label>
             <input
@@ -69,9 +69,9 @@
           </div>
         </section>
         <section class="card">
-          <img src="orderImages/alto.jpg" />
-          <h2 class="plantName">Alto</h2>
-          <p class="plantDescription">FICUS ALTISSIMA YELLOW GEM</p>
+          <img src="orderImages/ziggy.jpg" />
+          <h2 class="plantName">Ziggy</h2>
+          <p class="plantDescription">LIMITED EDITION VARIEGATED MONSTERA</p>
           <div class="orderCardSection">
             <label for="quantity">Item(s):</label>
             <input
@@ -85,9 +85,9 @@
           </div>
         </section>
         <section class="card">
-          <img src="orderImages/alto.jpg" />
-          <h2 class="plantName">Alto</h2>
-          <p class="plantDescription">FICUS ALTISSIMA YELLOW GEM</p>
+          <img src="orderImages/winston.jpg" />
+          <h2 class="plantName">Winston</h2>
+          <p class="plantDescription">LIVISTONA ROTUNDIFOLIA</p>
           <div class="orderCardSection">
             <label for="quantity">Item(s):</label>
             <input
@@ -100,8 +100,118 @@
             <button>Add to order</button>
           </div>
         </section>
-        <section class="card"></section>
-        <section class="card"></section>
+        <section class="card">
+          <img src="orderImages/musa.jpg" />
+          <h2 class="plantName">Musa</h2>
+          <p class="plantDescription">MUSA 'DWARF CAVENDISH'</p>
+          <div class="orderCardSection">
+            <label for="quantity">Item(s):</label>
+            <input
+              type="number"
+              id="quantity"
+              name="quantity"
+              min="1"
+              max="10"
+            /><br /><br />
+            <button>Add to order</button>
+          </div>
+        </section>
+        <section class="card">
+          <img src="orderImages/marge.jpg" />
+          <h2 class="plantName">Marge</h2>
+          <p class="plantDescription">GRAPE IVY</p>
+          <div class="orderCardSection">
+            <label for="quantity">Item(s):</label>
+            <input
+              type="number"
+              id="quantity"
+              name="quantity"
+              min="1"
+              max="10"
+            /><br /><br />
+            <button>Add to order</button>
+          </div>
+        </section>
+        <section class="card">
+          <img src="orderImages/FidelTree.jpg" />
+          <h2 class="plantName">Fidel Tree</h2>
+          <p class="plantDescription">FIDDLE-LEAF FIG</p>
+          <div class="orderCardSection">
+            <label for="quantity">Item(s):</label>
+            <input
+              type="number"
+              id="quantity"
+              name="quantity"
+              min="1"
+              max="10"
+            /><br /><br />
+            <button>Add to order</button>
+          </div>
+        </section>
+        <section class="card">
+          <img src="orderImages/phil.jpg" />
+          <h2 class="plantName">Phil</h2>
+          <p class="plantDescription">PHILODENDRON SCANDENS</p>
+          <div class="orderCardSection">
+            <label for="quantity">Item(s):</label>
+            <input
+              type="number"
+              id="quantity"
+              name="quantity"
+              min="1"
+              max="10"
+            /><br /><br />
+            <button>Add to order</button>
+          </div>
+        </section>
+        <section class="card">
+          <img src="orderImages/bali.jpg" />
+          <h2 class="plantName">Bali</h2>
+          <p class="plantDescription">PHILODENDRON SCANDENS</p>
+          <div class="orderCardSection">
+            <label for="quantity">Item(s):</label>
+            <input
+              type="number"
+              id="quantity"
+              name="quantity"
+              min="1"
+              max="10"
+            /><br /><br />
+            <button>Add to order</button>
+          </div>
+        </section>
+        <section class="card">
+          <img src="orderImages/dana.jpg" />
+          <h2 class="plantName">Dana</h2>
+          <p class="plantDescription">PHILODENDRON SCANDENS</p>
+          <div class="orderCardSection">
+            <label for="quantity">Item(s):</label>
+            <input
+              type="number"
+              id="quantity"
+              name="quantity"
+              min="1"
+              max="10"
+            /><br /><br />
+            <button>Add to order</button>
+          </div>
+        </section>
+        <section class="card">
+          <img src="orderImages/joey.jpg" />
+          <h2 class="plantName">Joey</h2>
+          <p class="plantDescription">PHILODENDRON SCANDENS</p>
+          <div class="orderCardSection">
+            <label for="quantity">Item(s):</label>
+            <input
+              type="number"
+              id="quantity"
+              name="quantity"
+              min="1"
+              max="10"
+            /><br /><br />
+            <button>Add to order</button>
+          </div>
+        </section>
       </div>
     </main>
     <footer>
