--- a/order.html
+++ b/order.html
@@ -1,5 +1,11 @@
 <html>
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <link href="orderstyle.css" rel="stylesheet" />
     <title>Order</title>
   </head>
@@ -25,13 +31,13 @@
           <h2 class="plantName">Alto</h2>
           <p class="plantDescription">FICUS ALTISSIMA YELLOW GEM</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -41,13 +47,13 @@
           <h2 class="plantName">Aurora</h2>
           <p class="plantDescription">VARIEGATED MONSTERA</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -57,13 +63,13 @@
           <h2 class="plantName">Cynthia</h2>
           <p class="plantDescription">AFRICAN FIG</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -73,13 +79,13 @@
           <h2 class="plantName">Ziggy</h2>
           <p class="plantDescription">LIMITED EDITION VARIEGATED MONSTERA</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -89,13 +95,13 @@
           <h2 class="plantName">Winston</h2>
           <p class="plantDescription">LIVISTONA ROTUNDIFOLIA</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -105,13 +111,13 @@
           <h2 class="plantName">Musa</h2>
           <p class="plantDescription">MUSA 'DWARF CAVENDISH'</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -121,13 +127,13 @@
           <h2 class="plantName">Marge</h2>
           <p class="plantDescription">GRAPE IVY</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -137,13 +143,13 @@
           <h2 class="plantName">Fidel Tree</h2>
           <p class="plantDescription">FIDDLE-LEAF FIG</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -153,13 +159,13 @@
           <h2 class="plantName">Phil</h2>
           <p class="plantDescription">PHILODENDRON SCANDENS</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -169,13 +175,13 @@
           <h2 class="plantName">Bali</h2>
           <p class="plantDescription">PHILODENDRON SCANDENS</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -185,13 +191,13 @@
           <h2 class="plantName">Dana</h2>
           <p class="plantDescription">PHILODENDRON SCANDENS</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
@@ -201,13 +207,13 @@
           <h2 class="plantName">Joey</h2>
           <p class="plantDescription">PHILODENDRON SCANDENS</p>
           <div class="orderCardSection">
-            <label for="quantity">Item(s):</label>
             <input
               type="number"
               id="quantity"
               name="quantity"
               min="1"
               max="10"
+              value="1"
             /><br /><br />
             <button>Add to order</button>
           </div>
