--- a/order.html
+++ b/order.html
@@ -25,199 +25,220 @@
     </header>
     <main>
       <h1 id="title">Indoor Plants</h1>
-      <div id="cardsCollection">
-        <section class="card">
-          <img src="orderImages/alto.jpg" />
-          <h2 class="plantName">Alto</h2>
-          <p class="plantDescription">FICUS ALTISSIMA YELLOW GEM</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/aurora.jpg" />
-          <h2 class="plantName">Aurora</h2>
-          <p class="plantDescription">VARIEGATED MONSTERA</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/cynthia.jpg" />
-          <h2 class="plantName">Cynthia</h2>
-          <p class="plantDescription">AFRICAN FIG</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/ziggy.jpg" />
-          <h2 class="plantName">Ziggy</h2>
-          <p class="plantDescription">LIMITED EDITION VARIEGATED MONSTERA</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/winston.jpg" />
-          <h2 class="plantName">Winston</h2>
-          <p class="plantDescription">LIVISTONA ROTUNDIFOLIA</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/musa.jpg" />
-          <h2 class="plantName">Musa</h2>
-          <p class="plantDescription">MUSA 'DWARF CAVENDISH'</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/marge.jpg" />
-          <h2 class="plantName">Marge</h2>
-          <p class="plantDescription">GRAPE IVY</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/FidelTree.jpg" />
-          <h2 class="plantName">Fidel Tree</h2>
-          <p class="plantDescription">FIDDLE-LEAF FIG</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/phil.jpg" />
-          <h2 class="plantName">Phil</h2>
-          <p class="plantDescription">PHILODENDRON SCANDENS</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/bali.jpg" />
-          <h2 class="plantName">Bali</h2>
-          <p class="plantDescription">PHILODENDRON SCANDENS</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/dana.jpg" />
-          <h2 class="plantName">Dana</h2>
-          <p class="plantDescription">PHILODENDRON SCANDENS</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
-        <section class="card">
-          <img src="orderImages/joey.jpg" />
-          <h2 class="plantName">Joey</h2>
-          <p class="plantDescription">PHILODENDRON SCANDENS</p>
-          <div class="orderCardSection">
-            <input
-              type="number"
-              id="quantity"
-              name="quantity"
-              min="1"
-              max="10"
-              value="1"
-            /><br /><br />
-            <button>Add to order</button>
-          </div>
-        </section>
+      <div class="content">
+        <div id="cardsCollection">
+          <section class="card">
+            <img src="orderImages/alto.jpg" />
+            <h2 class="plantName">Alto</h2>
+            <p class="plantDescription">FICUS ALTISSIMA YELLOW GEM</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/aurora.jpg" />
+            <h2 class="plantName">Aurora</h2>
+            <p class="plantDescription">VARIEGATED MONSTERA</p>
+            <p>£18</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/cynthia.jpg" />
+            <h2 class="plantName">Cynthia</h2>
+            <p class="plantDescription">AFRICAN FIG</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/ziggy.jpg" />
+            <h2 class="plantName">Ziggy</h2>
+            <p class="plantDescription">LIMITED EDITION VARIEGATED MONSTERA</p>
+            <p>£28</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/winston.jpg" />
+            <h2 class="plantName">Winston</h2>
+            <p class="plantDescription">LIVISTONA ROTUNDIFOLIA</p>
+            <p>£23</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/musa.jpg" />
+            <h2 class="plantName">Musa</h2>
+            <p class="plantDescription">MUSA 'DWARF CAVENDISH'</p>
+            <p>£32</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/marge.jpg" />
+            <h2 class="plantName">Marge</h2>
+            <p class="plantDescription">GRAPE IVY</p>
+            <p>£35</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/FidelTree.jpg" />
+            <h2 class="plantName">Fidel Tree</h2>
+            <p class="plantDescription">FIDDLE-LEAF FIG</p>
+            <p>£22</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/phil.jpg" />
+            <h2 class="plantName">Phil</h2>
+            <p class="plantDescription">PHILODENDRON SCANDENS</p>
+            <p>£38</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/bali.jpg" />
+            <h2 class="plantName">Bali</h2>
+            <p class="plantDescription">PHILODENDRON SCANDENS</p>
+            <p>£40</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/dana.jpg" />
+            <h2 class="plantName">Dana</h2>
+            <p class="plantDescription">PHILODENDRON SCANDENS</p>
+            <p>£27</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+          <section class="card">
+            <img src="orderImages/joey.jpg" />
+            <h2 class="plantName">Joey</h2>
+            <p class="plantDescription">PHILODENDRON SCANDENS</p>
+            <p>£20</p>
+            <div class="orderCardSection">
+              <input
+                type="number"
+                id="quantity"
+                name="quantity"
+                min="1"
+                max="10"
+                value="1"
+              /><br /><br />
+              <button>Add to order</button>
+            </div>
+          </section>
+        </div>
+        <aside>
+          <p>
+            Not all indoor plants were born equal. That is why we've put
+            together a shortlist of the 12 best indoor plants for any home or
+            workplace. Not only do they look great, they are all low
+            maintenance, and come in large and small sizes. Read on to find the
+            perfect plant for your space.
+          </p>
+        </aside>
       </div>
     </main>
     <footer>
