--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+<head>/files/U02K6CU9EJV/F04LLQE5D88/style.css
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initia/files/U02K6CU9EJV/F04LLQE5D88/style.cssl-scale=1.0">
     <title>Order safe meal | SafeMeal.com</title>
     <link rel="stylesheet" href="#">
     <link href="style.css" rel="stylesheet"> 
