update color pic

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     </nav>
     <main id="main">
     <section id="home">
-        <h1 class="h-primary">Welcome to Unic Garden</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus commodi sequi cum dolorum ad excepturi est
+        <h1 class="h-primary">Welcome to Eco Plant</h1>
+        <!--  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus commodi sequi cum dolorum ad excepturi est
             ratione qui, reiciendis aut impedit, numquam vel esse nulla ipsa doloremque perspiciatis officia suscipit
-        </p>
+        </p> -->
        
     </section>
     <!-- Service Container -->
