--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Order safe meal | SafeMeal.com</title>
     <link rel="stylesheet" href="#">
     <link href="style.css" rel="stylesheet"> 
@@ -96,6 +97,6 @@
             Copyright &copy; <www class="Unicgarden"></www>.com. All rights reserved!
         </div>
     </footer>
+    <script src="./script.js"></script>
 </body>
-
 </html>
