--- a/order.html
+++ b/order.html
@@ -21,6 +21,7 @@
           <li class="item"><a href="#">Home</a></li>
           <li class="item"><a href="order.html">Order</a></li>
           <li class="item"><a href="#">Get Involved</a></li>
+          <i id='shoppingBags' class="fa fa-shopping-bag" style="font-size:24px"></i>
         </ul>
       </nav>
     </header>
@@ -266,9 +267,9 @@
           <a href="#" class="fa fa-twitter"></a>
            <a href="#" class="fa fa-instagram"></a>
           <a href="#" class="fa fa-google"></a>
-
         </div>
         <p>Copyright © ECOPlant</p>
       </footer>
+     <script src="./script.js"></script>
   </body>
 </html>
