linked with home page

--- a/order.html
+++ b/order.html
@@ -18,7 +18,7 @@
           <p>	&#127793;	</p>	
         </div>
         <ul>
-          <li class="item"><a href="#">Home</a></li>
+          <li class="item"><a href="index.html">Home</a></li>
           <li class="item"><a href="order.html">Order</a></li>
           <li class="item"><a href="#">Get Involved</a></li>
           <i id='shoppingBags' class="fa fa-shopping-bag" style="font-size:24px"></i>
