--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         />
       </div>
       <ul>
-        <li class="item"><a href="#">Home</a></li>
+        <li class="item"><a href="#">Homellll</a></li>
         <li class="item"><a href="#">our Services</a></li>
         <li class="item"><a href="#">Partners</a></li>
         <li class="item"><a href="#">Contact Us</a></li>
