--- a/involve.html
+++ b/involve.html
@@ -1,85 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/involve.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/css/involve.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
     <title>EcoPlant</title>
-</head>
-<body>
+  </head>
+  <body>
+    <nav id="navbar">
+      <div id="logo">
+        <img
+          src="./Img/logo.png"
+          alt="Unicgarden.com"
+          width="80px"
+          height="80px"
+        />
+      </div>
+      <ul>
+        <li class="item"><a href="index.html">Home</a></li>
+        <li class="item"><a href="order.html">Order</a></li>
+        <li class="item"><a href="involve.html">Get Involved</a></li>
+      </ul>
+    </nav>
     <section>
-        <div id="digital-clock"> </div>
-        <div class="background-img">
-            <img loading="lazy" src="/Img/pic.jpg" width="100%" height="432" alt="Palm House covered in frost" title="Frost-covered Palm House" typeof="foaf:Image">
-            <div class="text-img">           
-            <h1>Our Future is EcoPlant</h1>
-            <h2>Plants are vital to our future of food, clean air and medicine. We're fighting against biodiversity loss to save life on Earth.</h2>
-            </div>
+      <div id="digital-clock"></div>
+      <div class="background-img">
+        <img
+          loading="lazy"
+          src="/Img/pic.jpg"
+          width="100%"
+          height="432"
+          alt="Palm House covered in frost"
+          title="Frost-covered Palm House"
+          typeof="foaf:Image"
+        />
+        <div class="text-img">
+          <h1>Our Future is EcoPlant</h1>
+          <h2>
+            Plants are vital to our future of food, clean air and medicine.
+            We're fighting against biodiversity loss to save life on Earth.
+          </h2>
         </div>
+      </div>
     </section>
     <p>JOIN US</p>
     <div>
-        <img loading="lazy" src="/Img/Child-and-Parent-in-Garden.jpg" width="800" height="432" alt="Palm House covered in frost" title="Frost-covered Palm House" typeof="foaf:Image">
-        <div class="container">
-            <p>Families</p>
-            <p>There's plenty on offer for families across EcoPlant botanic this season as you embark on a winter adventure, surrounded by botanical highlights across our wild landscape.
-            Start the new year with woodland walks, stunning viewpoints and an exciting new mission for children.</p>
-         </div>
+      <img
+        loading="lazy"
+        src="/Img/Child-and-Parent-in-Garden.jpg"
+        width="800"
+        height="432"
+        alt="Palm House covered in frost"
+        title="Frost-covered Palm House"
+        typeof="foaf:Image"
+      />
+      <div class="container">
+        <p>Families</p>
+        <p>
+          There's plenty on offer for families across EcoPlant botanic this
+          season as you embark on a winter adventure, surrounded by botanical
+          highlights across our wild landscape. Start the new year with woodland
+          walks, stunning viewpoints and an exciting new mission for children.
+        </p>
+      </div>
     </div>
     <div>
-        <img loading="lazy" src="/Img/adult_group_planting.jpg" width="800" height="432" alt="Palm House covered in frost" title="Frost-covered Palm House" typeof="foaf:Image">
-        <div class="container">
-            <p>Adult Groups</p>
-            <p>Why not wander through our Tropical workshops and learn about how to plant and see cocoa and vanlla growing or take your own medicine plant that you have planted with us
-            Lets start a new eximent experience with us and helping our world for a better climate.</p>
-         </div>
+      <img
+        loading="lazy"
+        src="/Img/adult_group_planting.jpg"
+        width="800"
+        height="432"
+        alt="Palm House covered in frost"
+        title="Frost-covered Palm House"
+        typeof="foaf:Image"
+      />
+      <div class="container">
+        <p>Adult Groups</p>
+        <p>
+          Why not wander through our Tropical workshops and learn about how to
+          plant and see cocoa and vanlla growing or take your own medicine plant
+          that you have planted with us Lets start a new eximent experience with
+          us and helping our world for a better climate.
+        </p>
+      </div>
     </div>
     <div>
-        <img loading="lazy" src="/Img/scholarshops.jpg" width="800" height="432" alt="Palm House covered in frost" title="Frost-covered Palm House" typeof="foaf:Image">
-        <div class="container">
-            <p>Scholarships</p>
-            <p>Our progrmas runs thought the year, helping all scholarships to learn about AGRICULTURE, CONSERVATION, ENVIRONMENTAL SCIENCE, FORESTRY, PUBLIC GARGENS and PLANT PATHOLOGY.
-           teaching the childrens to protect our enviromental it is essentil with our programs and summer bootcamps</p>
-         </div>
+      <img
+        loading="lazy"
+        src="/Img/scholarshops.jpg"
+        width="800"
+        height="432"
+        alt="Palm House covered in frost"
+        title="Frost-covered Palm House"
+        typeof="foaf:Image"
+      />
+      <div class="container">
+        <p>Scholarships</p>
+        <p>
+          Our progrmas runs thought the year, helping all scholarships to learn
+          about AGRICULTURE, CONSERVATION, ENVIRONMENTAL SCIENCE, FORESTRY,
+          PUBLIC GARGENS and PLANT PATHOLOGY. teaching the childrens to protect
+          our enviromental it is essentil with our programs and summer bootcamps
+        </p>
+      </div>
     </div>
     <div class="event">
-        <p>EVENTS</p>
-        <div class="event1">
-            <div>
-            <p>Christmas at EcoPlant<br>
-                Enter a botanical world filled with seasonal cheer...</p>
-                <img src="/Img/botanic_fireworks.jpg" width="300" height="300">
-            </div>
-            <div>
-                <p> Event at EcoPlant<br>
-                    Whether you're looking to host a team away-day or a chic drinks reception</p>
-                <img src="/Img/Birthday-Garden-Party.jpg" width="300" height="300">
-            </div>
-
-
+      <p>EVENTS</p>
+      <div class="event1">
+        <div>
+          <p>
+            Christmas at EcoPlant<br />
+            Enter a botanical world filled with seasonal cheer...
+          </p>
+          <img src="/Img/botanic_fireworks.jpg" width="300" height="300" />
         </div>
-
-        <div class="signup">
-            <div class="signupText">
-                <h2>Sign up for our newslatter</h2>
-                <h3>Highlights, events and offers straight to your inbox</h3>
-                <form>
-                    <input class="img/newsletter-signup__email required" required="required" type="email" id="email-202598779"
-                    name="email" placeholder="@email.com" aria-describedby="newsletter-signup__error-email"
-                    autocomplete="email"/>
-                    <button type="submit">SUBMIT</button>
-                </form>
-            </div>
+        <div>
+          <p>
+            Event at EcoPlant<br />
+            Whether you're looking to host a team away-day or a chic drinks
+            reception
+          </p>
+          <img src="/Img/Birthday-Garden-Party.jpg" width="300" height="300" />
         </div>
+      </div>
+
+      <div class="signup">
+        <div class="signupText">
+          <h2>Sign up for our newslatter</h2>
+          <h3>Highlights, events and offers straight to your inbox</h3>
+          <form>
+            <input
+              class="img/newsletter-signup__email required"
+              required="required"
+              type="email"
+              id="email-202598779"
+              name="email"
+              placeholder="@email.com"
+              aria-describedby="newsletter-signup__error-email"
+              autocomplete="email"
+            />
+            <button type="submit">SUBMIT</button>
+          </form>
+        </div>
+      </div>
     </div>
-</body>
+    <footer>
+      <div class="socialMedia">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-google"></a>
+      </div>
+      <p>Copyright © ECOPlant</p>
+    </footer>
+  </body>
 
-<script src = "js/involve.js"> </script>
-
+  <script src="js/involve.js"></script>
 </html>
-
-
-
-
-
