--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    /files/U02K6CU9EJV/F04LLQE5D88/style.css
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta
@@ -24,11 +23,18 @@
           height="80px"
         />
       </div>
+      <div id="logo">
+        <p>&#127793;</p>
+      </div>
       <ul>
-        <li class="item"><a href="#">Home</a></li>
-        <li class="item"><a href="#">Our Services</a></li>
-        <li class="item"><a href="#">Partners</a></li>
-        <li class="item"><a href="#">Contact Us</a></li>
+        <li class="item"><a href="index.html">Home</a></li>
+        <li class="item"><a href="order.html">Order</a></li>
+        <li class="item"><a href="involve.html">Get Involved</a></li>
+        <i
+          id="shoppingBags"
+          class="fa fa-shopping-bag"
+          style="font-size: 24px"
+        ></i>
       </ul>
     </nav>
     <main id="main">
@@ -115,10 +121,13 @@
     -->
 
     <footer>
-      <div class="center">
-        Copyright &copy; <www class="Unicgarden"></www>.com. All rights
-        reserved!
+      <div class="socialMedia">
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+        <a href="#" class="fa fa-google"></a>
       </div>
+      <p>Copyright © ECOPlant</p>
     </footer>
   </body>
 </html>
