--- a/order.html
+++ b/order.html
@@ -12,19 +12,27 @@
     <title>Order</title>
   </head>
   <body>
-    <header>
-      <nav id="navbar">
-        <div id="logo">
-          <p>	&#127793;	</p>	
-        </div>
-        <ul>
-          <li class="item"><a href="index.html">Home</a></li>
-          <li class="item"><a href="order.html">Order</a></li>
-          <li class="item"><a href="#">Get Involved</a></li>
-          <i id='shoppingBags' class="fa fa-shopping-bag" style="font-size:24px"></i>
-        </ul>
-      </nav>
-    </header>
+    <nav id="navbar">
+      <div id="logo">
+        <img
+          src="./Img/logo.png"
+          alt="Unicgarden.com"
+          width="80px"
+          height="80px"
+        />
+      </div>
+    
+      <ul>
+        <li class="item"><a href="index.html">Home</a></li>
+        <li class="item"><a href="order.html">Order</a></li>
+        <li class="item"><a href="involve.html">Get Involved</a></li>
+      </ul>
+      <i
+          id="shoppingBags"
+          class="fa fa-shopping-bag"
+          style="font-size: 24px"
+        ></i>
+    </nav>
     <main>
       <h1 id="title">Indoor Plants</h1>
       <p id="results">12 results</p>
