changes for index

--- a/index.html
+++ b/index.html
@@ -23,18 +23,11 @@
           height="80px"
         />
       </div>
-      <div id="logo">
-        <p>&#127793;</p>
-      </div>
+
       <ul>
         <li class="item"><a href="index.html">Home</a></li>
         <li class="item"><a href="order.html">Order</a></li>
         <li class="item"><a href="involve.html">Get Involved</a></li>
-        <i
-          id="shoppingBags"
-          class="fa fa-shopping-bag"
-          style="font-size: 24px"
-        ></i>
       </ul>
     </nav>
     <main id="main">
@@ -46,7 +39,9 @@
       </section>
       <!-- Service Container -->
       <section id="services-container">
-        <h1 class="h-primary-services center">Our Services</h1>
+        <h1 class="h-primary-services center" >
+          Our Services
+        </h1>
         <div id="services">
           <div class="box">
             <h2 class="h-secondary center service-font">Design Dour Garden</h2>
