changes for boxes

--- a/index.html
+++ b/index.html
@@ -39,34 +39,30 @@
       </section>
       <!-- Service Container -->
       <section id="services-container">
-        <h1 class="h-primary-services center" >
-          Our Services
-        </h1>
+        <h1 class="h-primary-services center">Our Services</h1>
         <div id="services">
           <div class="box">
-            <h2 class="h-secondary center service-font">Design Dour Garden</h2>
+            <h2 class="h-secondary center service-font">Design Your Garden</h2>
             <p class="center">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus,
-              quisquam! Quis laboriosam sit tempora voluptates ducimus vero odit
-              ipsa aperiam, nihil perferendis.
+              Are you dreaming of getting that stunning garden you have always
+              wanted? Do you need help and advice from an Expert garden designer
+              and landscaper in London? If so, then use our Garden Design
+              Service (and then we will build it for you).
             </p>
           </div>
           <div class="box">
             <h2 class="h-secondary center service-font">Rent a Gardener</h2>
             <p class="center">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus,
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat
-              et, cum esse aperiam exercitationem aut sapiente commodi natus
-              ipsa. Cumque deserunt esse facilis neque? Quia ipsa quos odio
-              corrupti nulla.
+              We will find gardeners in your area and do the legwork to contact
+              them on your behalf.
             </p>
           </div>
           <div class="box">
             <h2 class="h-secondary center service-font">Plant Delivery</h2>
             <p class="center">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus,
-              quisquam! Quis laboriosam sit tempora voluptates ducimus vero odit
-              ipsa aperiam, nihil perferendis.
+              Our range of indoor plants can be sent by post for free UK next
+              day delivery for those extra special occasions! From the
+              magnificent monstera plant which.
             </p>
           </div>
         </div>
