--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
       name="viewport"
       content="width=device-width, initia/files/U02K6CU9EJV/F04LLQE5D88/style.cssl-scale=1.0"
     />
-    <title>Order safe meal LORENA| SafeMeal.com</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <title>ECOPlant</title>
     <link rel="stylesheet" href="#" />
     <link href="style.css" rel="stylesheet" />
   </head>
@@ -47,7 +51,7 @@
               Are you dreaming of getting that stunning garden you have always
               wanted? Do you need help and advice from an Expert garden designer
               and landscaper in London? If so, then use our Garden Design
-              Service (and then we will build it for you).
+              Service and then we will build it for you.
             </p>
           </div>
           <div class="box">
@@ -61,13 +65,12 @@
             <h2 class="h-secondary center service-font">Plant Delivery</h2>
             <p class="center">
               Our range of indoor plants can be sent by post for free UK next
-              day delivery for those extra special occasions! From the
-              magnificent monstera plant which.
+              day delivery for those extra special occasions!
             </p>
           </div>
         </div>
       </section>
-      <button class="btn" href="order.html">Order Your Plant</button>
+      <button class="btn"><a href="order.html">Order Your Plant</a></button>
     </main>
     <!-- home section -->
 
