--- a/involve.html
+++ b/involve.html
@@ -36,25 +36,18 @@
     <section>
       <div id="digital-clock"></div>
       <div class="background-img">
-        <img
-          loading="lazy"
-          src="/Img/pic.jpg"
-          width="100%"
-          height="432"
-          alt="Palm House covered in frost"
-          title="Frost-covered Palm House"
-          typeof="foaf:Image"
-        />
-        <div class="text-img">
-          <h1>Our Future is EcoPlant</h1>
-          <h2>
+        <div class="brief">
+          <h1>Our Future is ECOPlant</h1>
+          <hr />
+          <p>
             Plants are vital to our future of food, clean air and medicine.
             We're fighting against biodiversity loss to save life on Earth.
-          </h2>
+          </p>
+          <p>JOIN US</p>
         </div>
       </div>
     </section>
-    <p>JOIN US</p>
+
     <div>
       <img
         loading="lazy"
@@ -118,14 +111,14 @@
     <div class="event">
       <p>EVENTS</p>
       <div class="event1">
-        <div>
+        <div class="half">
           <p>
             Christmas at EcoPlant<br />
             Enter a botanical world filled with seasonal cheer...
           </p>
           <img src="/Img/botanic_fireworks.jpg" width="300" height="300" />
         </div>
-        <div>
+        <div class="half">
           <p>
             Event at EcoPlant<br />
             Whether you're looking to host a team away-day or a chic drinks
